# Ivan-Koltsov1994-electronics_store-

./: .gitignore  README.md  main.py  pyproject.toml
scr/: dataclass.py  errors.py  keyboard.py  phone.py  product.py
src/: dataclass.py
tests/: test_keyboard.py  test_main.py  test_phone.py  test_product.py
